fix(layout): 헤더의 로그인 버튼의 클릭범위 수정, 다크모드와의 gap 추가

--- a/Front/src/component/Header.module.scss
+++ b/Front/src/component/Header.module.scss
@@ -3,6 +3,7 @@
     grid-template-columns: 150px 1fr 50px auto;
     align-items: center;
     padding: 0 20px;
+    gap: 10px;
     box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.2);
 }
 
